--- a/portainer/docker-compose.yaml
+++ b/portainer/docker-compose.yaml
@@ -11,3 +11,5 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
+volumes:
+  portainer_data:
