--- a/nextcloud/docker-compose.yaml
+++ b/nextcloud/docker-compose.yaml
@@ -1,57 +1,16 @@
 version: "3"
 services:
   nextcloud:
-    cap_add:
-      - AUDIT_WRITE
-      - CHOWN
-      - DAC_OVERRIDE
-      - FOWNER
-      - FSETID
-      - KILL
-      - MKNOD
-      - NET_BIND_SERVICE
-      - NET_RAW
-      - SETFCAP
-      - SETGID
-      - SETPCAP
-      - SETUID
-      - SYS_CHROOT
-    cap_drop:
-      - AUDIT_CONTROL
-      - BLOCK_SUSPEND
-      - DAC_READ_SEARCH
-      - IPC_LOCK
-      - IPC_OWNER
-      - LEASE
-      - LINUX_IMMUTABLE
-      - MAC_ADMIN
-      - MAC_OVERRIDE
-      - NET_ADMIN
-      - NET_BROADCAST
-      - SYSLOG
-      - SYS_ADMIN
-      - SYS_BOOT
-      - SYS_MODULE
-      - SYS_NICE
-      - SYS_PACCT
-      - SYS_PTRACE
-      - SYS_RAWIO
-      - SYS_RESOURCE
-      - SYS_TIME
-      - SYS_TTY_CONFIG
-      - WAKE_ALARM
+    image: linuxserver/nextcloud:latest
     container_name: nextcloud
     hostname: nextcloud
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Europe/Brussels
-    image: linuxserver/nextcloud:latest
     ports:
       - 3406:443/tcp
     restart: unless-stopped
-    stdin_open: true
-    tty: true
     volumes:
-      - /portainer/AppData/nextcloud/Config:/config
-      - /nexycloud/data:/data
+      - /data/volume1/docker/nextcloud/Config:/config
+      - /datancl:/data
