--- a/torrentarr/docker-compose.yaml
+++ b/torrentarr/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
     volumes:
       - /data/volume1/docker/radarr/config:/config
       - /data/volume1/docker/torrents/downloads:/downloads
-      - /data/volume1/movies:/movies
+      - /data/volume1/library/movies:/movies
   sonarr:
     image: linuxserver/sonarr:latest
     container_name: sonarr
@@ -45,22 +45,7 @@ services:
     volumes:
       - /data/volume1/docker/sonarr/config:/config
       - /data/volume1/docker/torrents/downloads:/downloads
-      - /data/volume1/tv:/tv
-  mylar:
-    image: linuxserver/mylar3:latest
-    container_name: mylar
-    hostname: mylar
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Europe/Brussels
-    ports:
-      - 8090:8090/tcp
-    restart: unless-stopped
-    volumes:
-      - /data/volume1/docker/mylar3/config:/config
-      - /data/volume1/docker/torrents/downloads:/downloads
-      - /data/volume1/comics:/comics
+      - /data/volume1/library/tv:/tv
   lidarr:
     image: linuxserver/lidarr:latest
     hostname: lidarr
@@ -75,7 +60,7 @@ services:
     volumes:
       - /data/volume1/docker/lidarr/config:/config
       - /data/volume1/docker/torrents/downloads:/downloads
-      - /data/volume1/music:/music
+      - /data/volume1/library/music:/music
   prowlarr:
     image: ghcr.io/linuxserver/prowlarr:develop
     container_name: Prowlarr
@@ -88,4 +73,4 @@ services:
       - 9696:9696/tcp
     restart: unless-stopped
     volumes:
-      - /data/volume1/doc1ker/Prowlarr/config:/config
+      - /data/volume1/doc1ker/prowlarr/config:/config
