rework on network and FS

--- a/torrentarr/docker-compose.yaml
+++ b/torrentarr/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
       - 6881:6881/udp
       - 8112:8112/tcp
     restart: unless-stopped
+    networks:
+      - bridge
     volumes:
       - /data/volume1/docker/deluge/config:/config
       - /data/volume1/docker/torrents/downloads:/downloads
@@ -27,6 +29,8 @@ services:
     ports:
       - 7878:7878/tcp
     restart: unless-stopped
+    networks:
+      - bridge
     volumes:
       - /data/volume1/docker/radarr/config:/config
       - /data/volume1/docker/torrents/downloads:/downloads
@@ -42,6 +46,8 @@ services:
     ports:
       - 8989:8989/tcp
     restart: unless-stopped
+    networks:
+      - bridge
     volumes:
       - /data/volume1/docker/sonarr/config:/config
       - /data/volume1/docker/torrents/downloads:/downloads
@@ -56,6 +62,8 @@ services:
       - TZ=Europe/Brussels
     ports:
       - 8686:8686/tcp
+    networks:
+      - bridge
     restart: unless-stopped
     volumes:
       - /data/volume1/docker/lidarr/config:/config
@@ -69,8 +77,13 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Europe/Brussels
+    networks:
+      - bridge
     ports:
       - 9696:9696/tcp
     restart: unless-stopped
     volumes:
       - /data/volume1/docker/prowlarr/config:/config
+networks:
+  bridge:
+    external: true
