--- a/Heimdall/docker-compose.yaml
+++ b/Heimdall/docker-compose.yaml
@@ -1,16 +1,21 @@
 version: "3"
 services:
-  Heimdall:
+  heimdall:
     image: linuxserver/heimdall:latest
-    container_name: Heimdall
-    hostname: Heimdall
+    container_name: heimdall
+    hostname: heimdall
     environment:
       - PUID=1024
       - PGID=1000
       - TZ=Europe/Amsterdam
+    networks:
+      - bridge
     ports:
       - 9143:443/tcp
       - 9180:80/tcp
     restart: unless-stopped
     volumes:
       - /data/volume1/docker/heimdall/config:/config
+networks:
+  bridge:
+    external: true
