--- a/uptime-kuma/docker-compose.yml
+++ b/uptime-kuma/docker-compose.yml
@@ -9,11 +9,7 @@ services:
     restart: unless-stopped
     volumes:
       - uptime-kuma:/app/data
-    networks:
-      - bridge
+    network_mode: bridge
 volumes:
   uptime-kuma:
-    external: true
-networks:
-  bridge:
     external: true
