--- a/filebrowser/docker-compose.yml
+++ b/filebrowser/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - 8082:80
     volumes:
-      - /volume1/filebrowser:/srv
+      - /srv/dev-disk-by-uuid-ef001675-7821-4ed9-8528-586c440f5fe6/winshare:/srv
       - /volume1/docker/filebrowser/filebrowser.db:/database.db
     restart: unless-stopped
     security_opt:
