wireguard and littlelink

--- a/wireguard/docker-compose.yaml
+++ b/wireguard/docker-compose.yaml
@@ -3,18 +3,20 @@ services:
   wireguard:
     image: linuxserver/wireguard
     container_name: wireguard
+    hostname: wireguard
+    network_mode: bridge
     cap_add:
       - NET_ADMIN
       - SYS_MODULE
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Europe/Paris
-      - SERVERURL=vpn.ekielzan.com #optional
-      - SERVERPORT=51820 #optional
-      - PEERS=6 #optional
-      - PEERDNS=192.168.68.105 #optional
-      - INTERNAL_SUBNET=192.168.69.0 #optional
+      - TZ=Europe/Brussels
+      - SERVERURL=vpn.ekielzan.com
+      - SERVERPORT=51820
+      - PEERS=phone1,phone2,pc1,pc2,pc3,misc1
+      - PEERDNS=auto
+      - INTERNAL_SUBNET=192.168.69.0
     volumes:
       - /volume1/docker/wireguard-server/config:/config
       - /lib/modules:/lib/modules
