--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
         uses: ibiqlik/action-yamllint@v3.1.0
         with:
           # File(s) or Directory, separate by space if multiple files or folder are specified
-          file_or_dir: **/*.yaml # optional
+          file_or_dir: . # optional
 
