--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -1,8 +1,2 @@
-# Multi line
-config_data: |
-  extends: default
-  rules:
-    new-line-at-end-of-file:
-      level: warning
-    trailing-spaces:
-      level: warning
+# Single line
+config_data: "{extends: default, rules: {new-line-at-end-of-file: disable}}"
