--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,5 @@ jobs:
         with:
           # File(s) or Directory, separate by space if multiple files or folder are specified
           file_or_dir: . # optional
+          config_data: "{extends: default, rules: {new-line-at-end-of-file: disable}}"
  
