--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -30,6 +30,5 @@ jobs:
         uses: ibiqlik/action-yamllint@v3.1.0
         with:
           # File(s) or Directory, separate by space if multiple files or folder are specified
-          file_or_dir: . # optional
-          config_data: "{extends: default, rules: {new-line-at-end-of-file: disable,line-length: disable}}"
- 
+          file_or_dir: .
+          config_data: "{extends: default, rules: {new-line-at-end-of-file: disable,line-length: disable, truthy: warning}}"
