--- a/torrentarr/docker-compose.yaml
+++ b/torrentarr/docker-compose.yaml
@@ -32,7 +32,7 @@ services:
     volumes:
       - /data/volume1/docker/radarr/config:/config
       - /data/volume1/docker/torrents/downloads:/downloads
-      - /data/volume1/library/movies:/movies
+      - /mnt/3tb/movies:/movies/library
   sonarr:
     image: linuxserver/sonarr:latest
     container_name: sonarr
@@ -48,7 +48,7 @@ services:
     volumes:
       - /data/volume1/docker/sonarr/config:/config
       - /data/volume1/docker/torrents/downloads:/downloads
-      - /data/volume1/library/tv:/tv
+      - /mnt/3tb/tvshow:/tv/library
   lidarr:
     image: linuxserver/lidarr:latest
     hostname: lidarr
@@ -64,7 +64,7 @@ services:
     volumes:
       - /data/volume1/docker/lidarr/config:/config
       - /data/volume1/docker/torrents/downloads:/downloads
-      - /data/volume1/library/music:/music
+      - /mnt/4tb/winshare/music:/music/library
   prowlarr:
     image: ghcr.io/linuxserver/prowlarr:develop
     container_name: Prowlarr
