[FIX] Polishing Code-server config

--- a/code-server/docker-compose.yaml
+++ b/code-server/docker-compose.yaml
@@ -20,3 +20,4 @@ services:
     volumes:
       - /volume1/docker/code-server/config:/config
       - /volume1/docker:/mnt/docker
+      - /volume1/workspace:/workspace
