Adding Traefik and cleanup

--- a/filebrowser/docker-compose.yaml
+++ b/filebrowser/docker-compose.yaml
@@ -1,5 +1,8 @@
 ---
 version: '3'
+networks:
+  proxy:
+    external: true
 services:
   file-browser:
     image: filebrowser/filebrowser
@@ -16,3 +19,18 @@ services:
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
+    networks:
+      - proxy
+      # https://docs.technotim.live/posts/grafana-loki/
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.filebrowser.entrypoints=http"
+      - "traefik.http.routers.filebrowser.rule=Host(`filebrowser.local.ekielzan.com`)"
+      - "traefik.http.middlewares.filebrowser-https-redirect.redirectscheme.scheme=https"
+      - "traefik.http.routers.filebrowser.middlewares=filebrowser-https-redirect"
+      - "traefik.http.routers.filebrowser-secure.entrypoints=https"
+      - "traefik.http.routers.filebrowser-secure.rule=Host(`filebrowser.local.ekielzan.com`)"
+      - "traefik.http.routers.filebrowser-secure.tls=true"
+      - "traefik.http.routers.filebrowser-secure.service=filebrowser"
+      - "traefik.http.services.filebrowser.loadbalancer.server.port=80"
+      - "traefik.docker.network=proxy"
