--- a/wireguard-gui/docker-compose.yaml
+++ b/wireguard-gui/docker-compose.yaml
@@ -21,4 +21,4 @@ services:
         sysctls:
             - net.ipv4.conf.all.src_valid_mark=1
             - net.ipv4.ip_forward=1
-        image: weejewel/wg-easy
+        image: weejewel/wg-easy:latest
