--- a/cadvisor/docker-compose.yaml
+++ b/cadvisor/docker-compose.yaml
@@ -14,3 +14,8 @@ services:
     network_mode: bridge
     ports:
       - 8081:8080
+    command:
+      - '-allow_dynamic_housekeeping=false'
+      - '-housekeeping_interval=30s'
+      - '-docker_only=true'
+      - '-disable_metrics=disk,sched,percpu,process,diskIO,tcp,udp'
