--- a/filebrowser/docker-compose.yaml
+++ b/filebrowser/docker-compose.yaml
@@ -8,14 +8,11 @@ services:
     image: filebrowser/filebrowser
     container_name: file-browser
     user: 1000:1000
-    network_mode: bridge
     environment:
       - TZ=Europe/Brussels
-    ports:
-      - 8082:80
     volumes:
-      - /srv/dev-disk-by-uuid-ef001675-7821-4ed9-8528-586c440f5fe6/winshare:/srv
-      - /volume1/docker/filebrowser/filebrowser.db:/database.db
+      - /mnt/4tb/winshare:/srv
+      - /data/docker/filebrowser/filebrowser.db:/database.db
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
@@ -25,11 +22,11 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.filebrowser.entrypoints=http"
-      - "traefik.http.routers.filebrowser.rule=Host(`filebrowser.local.ekielzan.com`)"
+      - "traefik.http.routers.filebrowser.rule=Host(`filebrowser.local.ekielzan.com`,`fb.ekielzan.com`)"
       - "traefik.http.middlewares.filebrowser-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.filebrowser.middlewares=filebrowser-https-redirect"
       - "traefik.http.routers.filebrowser-secure.entrypoints=https"
-      - "traefik.http.routers.filebrowser-secure.rule=Host(`filebrowser.local.ekielzan.com`)"
+      - "traefik.http.routers.filebrowser-secure.rule=Host(`filebrowser.local.ekielzan.com`,`fb.ekielzan.com`)"
       - "traefik.http.routers.filebrowser-secure.tls=true"
       - "traefik.http.routers.filebrowser-secure.service=filebrowser"
       - "traefik.http.services.filebrowser.loadbalancer.server.port=80"
