--- a/plex/docker-compose.yaml
+++ b/plex/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - PUID=1000
       - PGID=1000
       - VERSION=docker
+      - PLEX_CLAIM=claim-xycDdap7S2uxr4pt_ybr
     ports:
       - "32400:32400/tcp"
       - "3005:3005/tcp"
@@ -22,7 +23,7 @@ services:
       - "32414:32414/udp"
     volumes:
       - /dev/dri:/dev/dri
-      - /volume1/docker/plex/config:/config
+      - /mnt/4tb/docker/plex/config:/config
       - /mnt/4tb/winshare/music:/music
       - /mnt/3tb/movies:/movies
       - /mnt/3tb/tvshow/:/tv
