--- a/vaultwarden/docker-compose.yaml
+++ b/vaultwarden/docker-compose.yaml
@@ -11,8 +11,24 @@ services:
       - PGID=1000
       - TZ=Europe/Brussels
     volumes:
-      - /data/volume1/docker/vaultwarden/data:/data
+      - /volume1/docker/vaultwarden/data:/data
     ports:
       - 17881:80
-    network_mode: bridge
+    networks:
+      - proxy
     restart: unless-stopped
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.vault.entrypoints=http"
+      - "traefik.http.routers.vault.rule=Host(`vault.local.ekielzan.com`)"
+      - "traefik.http.middlewares.vault-https-redirect.redirectscheme.scheme=https"
+      - "traefik.http.routers.vault.middlewares=vault-https-redirect"
+      - "traefik.http.routers.vault-secure.entrypoints=https"
+      - "traefik.http.routers.vault-secure.rule=Host(`vault.local.ekielzan.com`)"
+      - "traefik.http.routers.vault-secure.tls=true"
+      - "traefik.http.routers.vault-secure.service=vault"
+      - "traefik.http.services.vault.loadbalancer.server.port=80"
+      - "traefik.docker.network=proxy"
+networks:
+  proxy:
+    external: true
