--- a/vaultwarden/docker-compose.yaml
+++ b/vaultwarden/docker-compose.yaml
@@ -20,11 +20,11 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.vault.entrypoints=http"
-      - "traefik.http.routers.vault.rule=Host(`vault.local.ekielzan.com`)"
+      - "traefik.http.routers.vault.rule=Host(`vault.ekielzan.com`)"
       - "traefik.http.middlewares.vault-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.vault.middlewares=vault-https-redirect"
       - "traefik.http.routers.vault-secure.entrypoints=https"
-      - "traefik.http.routers.vault-secure.rule=Host(`vault.local.ekielzan.com`)"
+      - "traefik.http.routers.vault-secure.rule=Host(`vault.ekielzan.com`)"
       - "traefik.http.routers.vault-secure.tls=true"
       - "traefik.http.routers.vault-secure.service=vault"
       - "traefik.http.services.vault.loadbalancer.server.port=80"
